# Flux

./: .env.example  .gitignore  pyproject.toml  requirements-dev.txt  requirements.txt
documents/: INDEX.md  PRODUCTION_READINESS_CHECKLIST.md  README.md
documents/backend/: README.md  api.md
documents/conception_archive/: 01-prd.md  02-user-personas-and-journey-maps.md  03-information-architecture-and-sitemap.md  04-user-flow-diagrams.md  05-low-fidelity-wireframes.md  06-functional-specification-document.md  07-technical-feasibility-study.md  08-system-architecture-document.md  09-data-strategy-and-content-pipeline-design.md  10-infrastructure-and-deployment-plan.md  11-security-and-risk-assessment.md  12-api-and-integration-strategy.md  13-monitoring-observability-and-alerting.md  14-content-strategy-and-expansion-roadmap.md  15-decision-log.md  16-build-plan.md
documents/database/: README.md
documents/devops/: README.md
documents/error-handler/: README.md
documents/frontend/: README.md  ui-components.md
documents/logger/: README.md
documents/plugins/: README.md  plugin-interface.md  quran-plugin.md
documents/scheduler/: README.md
flux/: config.py  db.py  logger.py  main.py  models.py  scheduler.py
flux/api/: ingredients.py  pipelines.py  system.py  workers.py
flux/core/: crypto.py  ingredients.py  lock.py  pipeline.py  production.py  workers.py
flux/plugins/: __init__.py  base.py  loader.py
scratch/: gen_b64.py
scripts/: bootstrap.sh  start.sh
tests/: conftest.py
tests/integration/: test_ingredients.py  test_pipelines.py  test_system.py  (+3 more)
(+31 files in other folders)
